--- a/client/public/index.html
+++ b/client/public/index.html
@@ -35,6 +35,74 @@
     <div id="root">
       
     </div>
+<!--        <footer class="footer">
+          <div class="meetTeam">
+
+             <div class="personContainer">
+              <div class="personHeader">
+                <img src="images/Richard.png" width="50" alt="" />
+                <span class="personTitle">Richard Fenix</span>
+              </div>
+              <ul class="personBody">
+                <a href="mailto:richard.fenix@gmail.com" target="_blank"><li>richard.fenix@gmail.com</li></a>
+                <a href="https://github.com/rfenix3"><li>GitHub Profile</li></a>
+                <a href="https://www.linkedin.com/in/richard-fenix/"><li>LinkedIn Profile</li></a>
+              </ul>
+            </div>
+
+             <div class="personContainer">
+              <div class="personHeader">
+                <img src="images/Brice.png" width="50" alt="" />
+                <span class="personTitle">Brice Nguoghia</span>
+              </div>
+              <ul class="personBody">
+                <a href="mailto:Bricen@gmail.com" target="_blank"><li>Bricen@gmail.com</li></a>
+                <a href="https://github.com/ngbricen"><li>GitHub Profile</li></a>
+                <a href="https://www.linkedin.com/in/bricenguoghia/"><li>LinkedIn Profile</li></a>
+              </ul>
+            </div> 
+
+             <div class="personContainer">
+              <div class="personHeader">
+                <img src="images/Mauricio.png" width="50" alt="" />
+                <span class="personTitle">Mauricio Ramirez</span>
+              </div>
+              <ul class="personBody">
+
+                <a href="https://github.com/marez111"><li>GitHub Profile</li></a>
+ 
+              </ul>
+            </div>
+
+             <div class="personContainer">
+              <div class="personHeader">
+                <img src="images/David.png" width="50" alt="" />
+                <span class="personTitle">David Rosenberg</span>
+              </div>
+              <ul class="personBody">
+                <a href="mailto:dsr0116@yahoo.com" target="_blank"><li>dsr0116@yahoo.com</li></a>
+                <a href="https://github.com/davesrose"><li>GitHub Profile</li></a>
+                <a href="https://www.linkedin.com/in/david-s-rosenberg/"><li>LinkedIn Profile</li></a>
+              </ul>
+            </div>
+
+            <div class="personContainer">
+              <div class="personHeader">
+                <img src="images/Hajar.png" width="50" alt="" />
+                <span class="personTitle">Hajar Zemzem</span>
+              </div>
+              <ul class="personBody">
+                <a href="mailto:hajar.zemzem@gmail.com" target="_blank"><li>hajar.zemzem@gmail.com</li></a>
+                <a href="https://github.com/hzemzem"><li>GitHub Profile</li></a>
+                <a href="https://www.linkedin.com/in/hajarzemzem/"><li>LinkedIn Profile</li></a>
+              </ul>
+            </div>
+          </div>
+
+          <div class="left">&copy;2017 | MS Connect</div>
+          <div class="meetTeamLink">Meet the Team</div>
+      </footer> -->
+    </body>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -45,5 +113,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script type="text/javascript" src="%PUBLIC_URL%/js/footer.js"></script>
   </body>
 </html>
