--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
+    <link href="%PUBLIC_URL%/styles.css" rel="stylesheet" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -25,6 +26,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <title>MS Connect Support</title>
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Mukta" rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"></script>
   <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/style.css">
   <script src="%PUBLIC_URL%/js/app.js"></script>
   </head>
@@ -32,9 +34,26 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    
     <div id="root">
       
     </div>
+        <div id="mario-chat" >
+            <h2>MS Chat</h2>
+            <div id="chat-window">
+                <div id="output"></div>
+                <div id="feedback"></div>
+            </div>
+            <input id="handle" type="text" placeholder="Handle" />
+            <input id="message" type="text" placeholder="Message" />
+            <button id="send">Send</button>
+            <div>
+              <p></p>
+            </div>
+            <button id="send">Connect</button>
+
+        </div>
+    <script src="%PUBLIC_URL%/js/chat.js"></script>
 <!--        <footer class="footer">
           <div class="meetTeam">
 
