--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,7 +26,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <title>MS Connect Support</title>
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Mukta" rel="stylesheet">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"></script> -->
   <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/style.css">
   <script src="%PUBLIC_URL%/js/app.js"></script>
   </head>
@@ -38,7 +38,7 @@
     <div id="root">
       
     </div>
-        <div id="mario-chat" >
+ <!--        <div id="mario-chat" >
             <h2>MS Chat</h2>
             <div id="chat-window">
                 <div id="output"></div>
@@ -53,74 +53,8 @@
             <button id="send">Connect</button>
 
         </div>
-    <script src="%PUBLIC_URL%/js/chat.js"></script>
-<!--        <footer class="footer">
-          <div class="meetTeam">
+    <script src="%PUBLIC_URL%/js/chat.js"></script> -->
 
-             <div class="personContainer">
-              <div class="personHeader">
-                <img src="images/Richard.png" width="50" alt="" />
-                <span class="personTitle">Richard Fenix</span>
-              </div>
-              <ul class="personBody">
-                <a href="mailto:richard.fenix@gmail.com" target="_blank"><li>richard.fenix@gmail.com</li></a>
-                <a href="https://github.com/rfenix3"><li>GitHub Profile</li></a>
-                <a href="https://www.linkedin.com/in/richard-fenix/"><li>LinkedIn Profile</li></a>
-              </ul>
-            </div>
-
-             <div class="personContainer">
-              <div class="personHeader">
-                <img src="images/Brice.png" width="50" alt="" />
-                <span class="personTitle">Brice Nguoghia</span>
-              </div>
-              <ul class="personBody">
-                <a href="mailto:Bricen@gmail.com" target="_blank"><li>Bricen@gmail.com</li></a>
-                <a href="https://github.com/ngbricen"><li>GitHub Profile</li></a>
-                <a href="https://www.linkedin.com/in/bricenguoghia/"><li>LinkedIn Profile</li></a>
-              </ul>
-            </div> 
-
-             <div class="personContainer">
-              <div class="personHeader">
-                <img src="images/Mauricio.png" width="50" alt="" />
-                <span class="personTitle">Mauricio Ramirez</span>
-              </div>
-              <ul class="personBody">
-
-                <a href="https://github.com/marez111"><li>GitHub Profile</li></a>
- 
-              </ul>
-            </div>
-
-             <div class="personContainer">
-              <div class="personHeader">
-                <img src="images/David.png" width="50" alt="" />
-                <span class="personTitle">David Rosenberg</span>
-              </div>
-              <ul class="personBody">
-                <a href="mailto:dsr0116@yahoo.com" target="_blank"><li>dsr0116@yahoo.com</li></a>
-                <a href="https://github.com/davesrose"><li>GitHub Profile</li></a>
-                <a href="https://www.linkedin.com/in/david-s-rosenberg/"><li>LinkedIn Profile</li></a>
-              </ul>
-            </div>
-
-            <div class="personContainer">
-              <div class="personHeader">
-                <img src="images/Hajar.png" width="50" alt="" />
-                <span class="personTitle">Hajar Zemzem</span>
-              </div>
-              <ul class="personBody">
-                <a href="mailto:hajar.zemzem@gmail.com" target="_blank"><li>hajar.zemzem@gmail.com</li></a>
-                <a href="https://github.com/hzemzem"><li>GitHub Profile</li></a>
-                <a href="https://www.linkedin.com/in/hajarzemzem/"><li>LinkedIn Profile</li></a>
-              </ul>
-            </div>
-          </div>
-
-          <div class="left">&copy;2017 | MS Connect</div>
-          <div class="meetTeamLink">Meet the Team</div>
-      </footer> -->
     </body>
     <!--
       This HTML file is a template.
